# django-constance

./: .coveragerc  .gitignore  .hgignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: docs.yml  release.yml  test.yml
.tx/: config
constance/: __init__.py  admin.py  apps.py  backends.py  base.py  checks.py  codecs.py  config.py  connect.py  context_processors.py  fields.py  forms.py  models.py  settings.py  signals.py  utils.py
constance/backends/: __init__.py  database.py  dummy.py  memory.py  redis.py  redisd.py  simple.py
constance/backends/database/: __init__.py  apps.py  models.py
constance/backends/database/migrations/: 0001_initial.py  0002_auto_20181227_1003.py  0002_auto_20190129_2304.py  0002_auto__chg_field_constance_key__add_unique_constance_key.py  __init__.py
constance/backends/database/south_migrations/: 0001_initial.py  0002_auto__chg_field_constance_key__add_unique_constance_key.py
constance/config_changelog/: admin.py  models.py
constance/config_changelog/migrations/: 0001_initial.py
constance/locale/cs/LC_MESSAGES/: django.mo  django.po
constance/locale/cs_CZ/LC_MESSAGES/: django.mo  django.po
constance/locale/de/LC_MESSAGES/: django.mo  django.po
constance/locale/en/LC_MESSAGES/: django.mo  django.po
constance/locale/es/LC_MESSAGES/: django.mo  django.po
constance/locale/et/LC_MESSAGES/: django.mo  django.po
constance/locale/it/LC_MESSAGES/: django.mo  django.po
constance/locale/pl/LC_MESSAGES/: django.mo  django.po
constance/locale/ru/LC_MESSAGES/: django.mo  django.po
constance/locale/tr/LC_MESSAGES/: django.po
constance/locale/uk/: django.mo  django.po
constance/locale/uk/LC_MESSAGES/: django.mo  django.po
constance/locale/zh_CN/LC_MESSAGES/: django.mo  django.po
constance/locale/zh_Hans/LC_MESSAGES/: django.po
constance/management/: utils.py
constance/management/commands/: constance.py
constance/migrations/: 0001_initial.py  0002_auto_20190129_2304.py  0002_migrate_from_old_table.py  0003_drop_pickle.py  0003_migrate_from_old_table.py
constance/static/admin/css/: constance.css
constance/static/admin/js/: constance.js
constance/templates/admin/constance/: change_list.html  change_list_grappelli.html  config_history.html  suit_change_list.html
constance/templates/admin/constance/includes/: readonly_results_list.html  results_list.html
constance/templatetags/: constance_tags.py
constance/test/: __init__.py  base.py  pytest.py  unittest.py  utils.py
constance/tests/: __init__.py  redis_mockup.py  runtests.py  test_config.py  test_settings.py
docs/: Makefile  backends.rst  changes.rst  conf.py  index.rst  make.bat  requirements.txt  testing.rst
docs/extensions/: settings.py
example/: manage.py  requirements.txt
example/cheeseshop/: fields.py  settings.py  urls.py  utils.py  wsgi.py
example/cheeseshop/apps/catalog/: admin.py  models.py
example/cheeseshop/apps/catalog/migrations/: 0001_initial.py
example/cheeseshop/apps/storage/: admin.py  models.py
example/cheeseshop/apps/storage/migrations/: 0001_initial.py
tests/: cache_mockup.py  redis_mockup.py  runtests.py  settings.py  storage.py  test_admin.py  test_app.py  test_async.py  test_checks.py  test_cli.py  test_cli_utils.py  test_codecs.py  test_database.py  test_form.py  test_pytest_overrides.py  test_redis.py  test_settings.py  test_test_overrides.py  test_test_utils.py  test_utils.py  tests.py  urls.py
tests/backends/: test_database.py  test_memory.py  test_redis.py  test_simple.py
tests/testproject/: settings.py  urls.py
tests/testproject/test_app/tests/: __init__.py  helpers.py  test_config.py
